# fundus-data-toolkit

./: README.md  pyproject.toml
config/: config.yaml
notebooks/: test_classification_datasets.ipynb  test_datasets.ipynb  test_segmentation_odmac_datasets.ipynb
src/fundusData/data_aug/: __init__.py  classification.py
src/fundusData/datamodules/: __init__.py  classification.py  common.py  utils.py
src/fundusData/datasets/: classification.py  segmentation.py  utils.py
src/fundusData/utils/: image_processing.py  path_processing.py
src/fundus_data_toolkit/: config.py  const.py  functional.py
src/fundus_data_toolkit/data_aug/: __init__.py  classification.py  segmentation.py
src/fundus_data_toolkit/datamodules/: __init__.py  classification.py  common.py  segmentation.py  utils.py
src/fundus_data_toolkit/datasets/: classification.py  generic.py  segmentation.py  utils.py
src/fundus_data_toolkit/utils/: composer.py  image_processing.py  usersettings.py  visualization.py
