[project]
name = "fundus_data_toolkit"
version = "0.1.0"
description = "A simple interface for creating datamodules from publicly available fundus datasets"
dependencies = [
    "albumentations",
    "appdirs",
    "torch",
    "torchvision",
    "numpy",
    "opencv-python-headless",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "scipy",
    "tqdm",
    "pytorch-lightning",
    "nntools @ git+https://github.com/ClementPla/NNTools@attrs_dataset",
    "attrs",
    "timm",
    "wandb",
    "jaxtyping",
]
readme = "README.md"

[project.optional-dependencies]
dev = ["black", "ruff", "pre-commit"]

notebook = ["ipykernel", "matplotlib"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = ["E", "F", "I", "RUF", "TCH"]
fixable = ["I", "RUF100", "TCH"]
fix = true
